--- a/Construction/Construction.html
+++ b/Construction/Construction.html
@@ -16432,7 +16432,7 @@ img {vertical-align: middle;}
 
         <li><a href="#">Page 2</a></li>-->
         <li><a class="navbar-brand" href="../../About.html"  style="font-size:18px;">ABOUT</a></li>
-        <li><a class="navbar-brand" href="mailto: renjith@ecovolks.com"  style="font-size:18px;"> CONTACT</a></li>
+        <li><a class="navbar-brand" href="mailto: arunvk@ecovolks.com"  style="font-size:18px;"> CONTACT</a></li>
       </ul>
     </div>
   </div>
@@ -16511,8 +16511,7 @@ img {vertical-align: middle;}
 
               <!--<div class="content2 col">-->
 
-              <h2 style="font-size:32px" align="justify">Our construction activities are
-                carried out in partnership with ESPY associates. We aim to provide value-added
+              <h2 style="font-size:32px" align="justify"> We aim to provide value-added
                 construction services to our customers by creating a successful partnership
                 with them throughout the construction process. As a residential, commercial
                 and industrial builder, we adopt a disciplined and consistent
