--- a/Construction/Construction.html
+++ b/Construction/Construction.html
@@ -16432,7 +16432,7 @@ img {vertical-align: middle;}
 
         <li><a href="#">Page 2</a></li>-->
         <li><a class="navbar-brand" href="../../About.html"  style="font-size:18px;">ABOUT</a></li>
-        <li><a class="navbar-brand" href="mailto: arunvk@ecovolks.com"  style="font-size:18px;"> CONTACT</a></li>
+        <li><a class="navbar-brand" href="../../Contact.html"  style="font-size:18px;"> CONTACT</a></li>
       </ul>
     </div>
   </div>
