--- a/About.html
+++ b/About.html
@@ -123,7 +123,7 @@ html {
 
         <li><a href="#">Page 2</a></li>-->
 
-        <li><a class="navbar-brand" href="mailto: renjith@ecovolks.com"  style="font-size:18px;"> CONTACT</a></li>
+        <li><a class="navbar-brand" href="Contact.html"  style="font-size:18px;"> CONTACT</a></li>
       </ul>
     </div>
   </div>
