--- a/Contact.html
+++ b/Contact.html
@@ -849,9 +849,8 @@ html {
   <div class="text-center">
   <div class="row1">
     <div class="column-66">
-      <h1 class="large-font" style="color:MediumSeaGreen;" align="left"><b>At Choice you always talk to a human!</b></h1>
-        <p align="justify"><span style="font-size:20px">Have questions about EcoVolks? Our entire team receives specialized training regularly to ensure you're receiving the best information possible. From basic questions to complex compliance inquiries, we're here to help!</span></p>
-          <p align="justify"><span style="font-size:20px">Interested in learning more about our services? Our Account Executives take the time to discuss your existing background screening program and help you make smart decisions that best meet your needs. </span></p>
+      <h1 class="large-font" style="color:MediumSeaGreen;" align="left"><b>At EcoVolks you always talk to a human!</b></h1>
+        <p align="justify"><span style="font-size:20px">Have questions about EcoVolks? Our entire team receives specialized training regularly to ensure you're receiving the best information possible. From basic questions to complex inquiries, we're here to help!</span></p>
       <!--<button class="button" style="background-color:red">Read More</button>-->
     </div>
     <div class="column-33"><br><br><br><br>
